--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,19 @@
-title: Just the Docs Template
+title: Jelle Dekkers
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
+url: https://adriaanjelle.nl
 
-url: https://just-the-docs.github.io
+favicon_ico: "/assets/images/favicon.png"
+
+search_enabled: false
+heading_anchors: false
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages"
+    values:
+      layout: "minimal"
