--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ defaults:
       path: "" # an empty string here means all files in the project
       type: "pages"
     values:
-      layout: "minimal"
+      layout: "default"
