--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,19 @@ defaults:
       type: "pages"
     values:
       layout: "default"
+
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
